--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap" rel="stylesheet">
 </head>
-<body class="debug">
+<body class="">
 
-    <header class="nav"></header>
-    <!-- /.menu -->
+    <header>
+        <img class="logo" src="./img/logo.png" alt="logo e titolo neori">
+        <nav>
+            <span class="nav">FEATURES</span>
+            <span class="nav">EDITORIALS</span>
+            <span class="nav">ENVIROMENT</span>
+            <span class="nav">BLOG</span>
+            <span class="nav">SHOP</span>
+            <span class="nav">CONTACT</span>
+        </nav>
+    </header>
 
     <main class="content clearfix">
 
