finito banner introduttivo
aggiunto testo al banner introduttivo

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 
     <main class="content clearfix">
 
-        <section class="intro"></section>
-        <!-- /.intro -->
+        <section class="intro">
+            <div class="introtext">
+                <h3>Pretium ac placerat dui interdum nunc in eros urna morbi</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut viverra nisl rutrum, pretium lectus nec, sagittis dolor. Phasellus eleifend efficitur...</p>
+            </div>
+
+        </section>
 
         <section class="leadership"></section>
         <!-- /.leadership -->
