--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap" rel="stylesheet">
 </head>
-<body class="">
+<body class="debug">
 
     <header>
         <img class="logo" src="./img/logo.png" alt="logo e titolo neori">
@@ -34,8 +34,10 @@
 
         </section>
 
-        <section class="leadership"></section>
-        <!-- /.leadership -->
+        <section class="leadership">
+            <h2><strong>Leadership</strong></h2>
+            <p>Fertenum urna a libero tempus</p>
+        </section>
 
         <!-- menu sinistro -->
         <section class="menu sx"></section>
